fix footer z-index

--- a/common/common.scss
+++ b/common/common.scss
@@ -334,6 +334,7 @@ span.user-title {
   text-align: center;
   color: white;
   position: fixed;
+  z-index: 300;
   bottom: 0px;
   display: flex;
   flex-direction: column;
